apps/radarr/base/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media
spec:
  type: ClusterIP
  selector:
    app: radarr
  ports:
  - port: 7878
    targetPort: 7878
    protocol: TCP
    name: http
